--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </div>
         </nav>
       </header>
-      <section class="section-1">
-        <div class="content">
+      <section class="bannerPart1">
+        <div class="bannerPart1-content">
           <div class="content-head">LOREM IPSUM</div>
           <div class="content-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus id
@@ -37,23 +37,23 @@
             nec justo mollis, in tincidunt erat pretium. Sed pulvinar, massa ac
             porta viverra.
           </div>
-          <div class="Btn"><button class="button">Click Me</button></div>
+          <div class="buttonF"><button class="button">Click Me</button></div>
         </div>
         <div class="image"></div>
       </section>
       <section class="section-2">
         <div class="imgs">
-          <div class="street">
-            <div class="street-1"></div>
-            <div class="street-2"></div>
+          <div class="path">
+            <div class="roadsideGroup"></div>
+            <div class="singlePath"></div>
           </div>
           <div class="food"></div>
         </div>
         <div class="text">
-          <div class="text-1">
-            <div class="text-start">LOREM IPSUM</div>
-            <div class="text-middle">LOREM IPSUM SET ADEMIR</div>
-            <div class="text-end">
+          <div class="p-1">
+            <div class="simpleHeader">LOREM IPSUM</div>
+            <div class="boldHeader">LOREM IPSUM SET ADEMIR</div>
+            <div class="arrowSymbol">
                 <div class="click">Click</div>
                 <div><img src="Assets/icons8-arrow-30.png" width="20px"height="20px"/></div>
             </div>
